--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
   <title>Afinador de Violão</title>
   <!-- p5 -->
-  <script src="p5.min.js"></script>
+  <script src="./js/p5.min.js"></script>
   <!-- ml5 -->
-  <script src="ml5.min.js"></script>
+  <script src="./js/ml5.min.js"></script>
 
-  <script src="p5.sound.min.js"></script>
+  <script src="./js/p5.sound.min.js"></script>
 
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-  <script src="sketch.js"></script>
-</body></html>
+  <script src="./js/sketch.js"></script>
+</body>
+
+</html>
